# mckenzie-bevy

./: Cargo.toml  README.md
assets/: mckenzie-cube.glb
src/: main.rs
